# libSAR

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
base/: base.py
sentinel1/: __init__.py  deburst.py  sentinel1.py  structures.py
src/libSAR.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/libSAR/sentinel1/: __init__.py  assembly.py  geolocation.py  georeferencing.py  structures.py
src/libSAR/shared/: __init__.py  errors.py  structures.py
tests/: test_sentinel1.py
tests/test_data/S1A_IW_SLC__1SDV_20230111T060136_20230111T060203_046732_059A26_F5B0.SAFE/: manifest.safe
tests/test_data/S1A_IW_SLC__1SDV_20230111T060136_20230111T060203_046732_059A26_F5B0.SAFE/annotation/: s1a-iw1-slc-vh-20230111t060138-20230111t060203-046732-059a26-001.xml  s1a-iw1-slc-vv-20230111t060138-20230111t060203-046732-059a26-004.xml  s1a-iw2-slc-vh-20230111t060136-20230111t060201-046732-059a26-002.xml  s1a-iw2-slc-vv-20230111t060136-20230111t060201-046732-059a26-005.xml  s1a-iw3-slc-vh-20230111t060137-20230111t060202-046732-059a26-003.xml  s1a-iw3-slc-vv-20230111t060137-20230111t060202-046732-059a26-006.xml
tests/test_data/S1A_IW_SLC__1SDV_20230111T060136_20230111T060203_046732_059A26_F5B0.SAFE/annotation/calibration/: calibration-s1a-iw1-slc-vh-20230111t060138-20230111t060203-046732-059a26-001.xml  calibration-s1a-iw1-slc-vv-20230111t060138-20230111t060203-046732-059a26-004.xml  (+10 more)
tests/test_data/S1A_IW_SLC__1SDV_20230111T060136_20230111T060203_046732_059A26_F5B0.SAFE/preview/: map-overlay.kml  product-preview.html
(+6 files in other folders)
