[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "libSAR"
version = "0.0.0"
authors = [
        {name="Joseph Doundoulakis", email="iosif.doundoulakis@outlook.com"},
            ]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["numpy > 1.20", "gdal >= 3.2.0", "lxml > 4.5.0"]